Project

General

Profile

Actions

Bug #12083

closed

libsum: cast between incompatible function types

Added by Toomas Soome over 3 years ago. Updated over 3 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
lib - userland libraries
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

Build errors with gcc 8:

    ../common/sum-lmd.c: In function 'md5_open':
    ../common/sum-lmd.c:174:18: error: cast between incompatible function types from 'void (*)(MD5_CTX *, const void *, unsigned int)' {aka 'void (*)(struct <anonymous> *, const void *, unsigned int)'} to 'void (*)(void *, const void *, size_t)' {aka 'void (*)(void *, const void *, long unsigned int)'} [-Werror=cast-function-type]
       lmd->updatef = (Lmd_update_f)MD5Update;
                      ^
    cc1: all warnings being treated as errors

Actions #1

Updated by Electric Monk over 3 years ago

  • % Done changed from 90 to 100
  • Status changed from In Progress to Closed

git commit 6dcdaa03d6dbb08e16fd2b10e01cceb9a729c050

commit  6dcdaa03d6dbb08e16fd2b10e01cceb9a729c050
Author: Toomas Soome <tsoome@me.com>
Date:   2020-01-17T06:39:26.000Z

    12083 libsum: cast between incompatible function types
    Reviewed by: John Levon <john.levon@joyent.com>
    Reviewed by: C Fraire <cfraire@me.com>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF