12083 libsum: cast between incompatible function types Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>